--- a/Second Attempt at Improving Accuracy.ipynb
+++ b/Second Attempt at Improving Accuracy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,9 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import re"
+    "import re\n",
+    "from nltk.stem import PorterStemmer\n",
+    "from nltk.tokenize import word_tokenize"
    ]
   },
   {
@@ -621,7 +623,207 @@
    "source": [
     "80.08% is the highest accuracy that we have achieved as of yet. This is expected as there is an evenly distributed number of words in the vector that are positive and negative. \n",
     "\n",
-    "Let's see if applying stemming will increase the accuracy further."
+    "Let's see if applying stemming will increase the accuracy further. This is a less reliable method to improve accuracy as there is a risk of overtstemming or understemming."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "program  :  program\n",
+      "programs  :  program\n",
+      "programmer  :  programm\n",
+      "programming  :  program\n",
+      "programmers  :  programm\n"
+     ]
+    }
+   ],
+   "source": [
+    "ps = PorterStemmer()\n",
+    " \n",
+    "# choose some words to be stemmed\n",
+    "words = [\"program\", \"programs\", \"programmer\", \"programming\", \"programmers\"]\n",
+    " \n",
+    "for w in words:\n",
+    "    print(w, \" : \", ps.stem(w))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\ntrain_data = []\\ntrain_data_labels = []\\ntest_data = []\\ntest_data_labels = []\\n\\nps = PorterStemmer()\\n\\nfor review_id in range(0,50000):\\n    review_stemmed_words = []\\n    review = all_data[review_id]\\n    if review_id in training_ids:\\n        for word in review.split():\\n            review_stemmed_words.append(ps.stem(word))\\n        train_data.append(\" \".join(review_stemmed_words))\\n        train_data_labels.append(all_data_labels[review_id])\\n    else:\\n        for word in review.split():\\n            review_stemmed_words.append(ps.stem(word))\\n        test_data.append(\" \".join(review_stemmed_words))\\n        test_data_labels.append(all_data_labels[review_id])\\n'"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data = []\n",
+    "train_data_labels = []\n",
+    "test_data = []\n",
+    "test_data_labels = []\n",
+    "\n",
+    "ps = PorterStemmer()\n",
+    "\n",
+    "for review_id in range(0,50000):\n",
+    "    review_stemmed_words = []\n",
+    "    review = all_data[review_id]\n",
+    "    if review_id in training_ids:\n",
+    "        for word in review.split():\n",
+    "            review_stemmed_words.append(ps.stem(word))\n",
+    "        train_data.append(\" \".join(review_stemmed_words))\n",
+    "        train_data_labels.append(all_data_labels[review_id])\n",
+    "    else:\n",
+    "        for word in review.split():\n",
+    "            review_stemmed_words.append(ps.stem(word))\n",
+    "        test_data.append(\" \".join(review_stemmed_words))\n",
+    "        test_data_labels.append(all_data_labels[review_id])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positive_train_data = []\n",
+    "negative_train_data = []\n",
+    "\n",
+    "for i in range(0,40000):\n",
+    "    if train_data_labels[i]:\n",
+    "        positive_train_data.append(train_data[i])\n",
+    "    else:\n",
+    "        negative_train_data.append(train_data[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Positive Vector\n",
+    "vectorizer_positive = CountVectorizer(analyzer='word', max_features=150, lowercase=True, stop_words='english')\n",
+    "features_positive = vectorizer_positive.fit_transform(positive_train_data)\n",
+    "positive_vocabulary = vectorizer_positive.vocabulary_\n",
+    "\n",
+    "# Negative Vector\n",
+    "vectorizer_negative = CountVectorizer(analyzer='word', max_features=150, lowercase=True, stop_words='english')\n",
+    "features_negative = vectorizer_negative.fit_transform(negative_train_data)\n",
+    "negative_vocabulary = vectorizer_negative.vocabulary_\n",
+    "\n",
+    "# Combining both vectors and re-indexing the vector\n",
+    "vocabulary = {**positive_vocabulary, **negative_vocabulary}\n",
+    "temp = []\n",
+    "unique_vocabulary = dict()\n",
+    "i = 0\n",
+    "for key, val in vocabulary.items():\n",
+    "    vocabulary[key] = i\n",
+    "    i += 1\n",
+    "\n",
+    "# Using CountVectorizer with this new vocabulary\n",
+    "vectorizer_combined = CountVectorizer(vocabulary=vocabulary, lowercase=True, stop_words='english')\n",
+    "features = vectorizer_combined.fit_transform(train_data)\n",
+    "features_nd = features.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\laram\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "log_model = LogisticRegression()\n",
+    "log_model = log_model.fit(X=features_nd,y=train_data_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\laram\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "log_model = LogisticRegression()\n",
+    "log_model = log_model.fit(X=features_nd,y=train_data_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\laram\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\base.py:291: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
+      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
+      "  indices = (scores > 0).astype(np.int)\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_pred=log_model.predict(vectorizer_combined.transform(test_data).toarray())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7959\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(accuracy_score(test_pred,test_data_labels))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An accuracy of 79.59% is a slight reduction from the result achieved by adjusting the vector format and removing stop words, which achieved an accuracy of 80.08%."
    ]
   },
   {
