Pt.2: Changing from binary classification to multiclass classification

--- a/Part_2/Adjusting CrowS-Pairs Dataset.ipynb
+++ b/Part_2/Adjusting CrowS-Pairs Dataset.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "The model only requires two columns, namely the sentence and the label.\n",
     "\n",
-    "As CrowS-Pairs is structured in sentence pairs, I have labelled the 'sent_more' sentence as the stereotype sentence and the 'sent_less' one as the non-stereotype. In this model, 'stereotype' is an umbrella term for both sentence pairs that show stereotypes and antistereotypes. These stereotypes/anti-stereotypes are describer [here]() as:\n",
+    "As CrowS-Pairs is structured in sentence pairs, I have labelled the 'sent_more' sentence as the stereotype or antistereotype sentences,  and the 'sent_less' one as the non-stereotype. In this model, 'stereotype' is an umbrella term for both sentence pairs that show stereotypes and antistereotypes. This is a multiclass classification model, stereotype sentences are represented with the label 1, antistereotype sentences are represented with the label 2, and non-stereotype sentences are represented with the label 0. These stereotypes/anti-stereotypes are describer [here](https://github.com/nyu-mll/crows-pairs/blob/master/README.md) as:\n",
     "\n",
     "```\n",
     "The stereotypical direction of the pair: A stereo direction denotes that sent_more is a sentence that demonstrates a stereotype of a historically disadvantaged group. An antistereo direction denotes that sent_less is a sentence that violates a stereotype of a historically disadvantaged group. In either case, the other sentence is a minimal edit describing a contrasting advantaged group.\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,21 +68,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "for index, row in all_data.iterrows():\n",
     "    \n",
     "    finetune_data['sentence'].append(row['sent_more'])\n",
-    "    finetune_data['label'].append(1)\n",
+    "    if row['stereo_antistereo'] == 'stereo':\n",
+    "        finetune_data['label'].append(1)\n",
+    "    else:\n",
+    "        finetune_data['label'].append(2)\n",
     "    finetune_data['sentence'].append(row['sent_less'])\n",
     "    finetune_data['label'].append(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
